# LANSync

./: README.md  keystore.py  ratelimit.py  requirements.txt  sync.py  tls.py
lansync/: __init__.py  __main__.py  cli.py  config.py  gui.py  protocol.py  pyproject.toml  sanitize.py  server.py  sync.py
tests/: test_e2e.py
