[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lansync"
version = "1.0.0"
description = "LAN file sync with a Tkinter GUI, key-based pairing, and named importable backup configs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "lansync contributors" }]
dependencies = []

[project.optional-dependencies]
tls = ["cryptography>=41.0"]

[project.scripts]
lansync = "lansync.cli:main"

[project.gui-scripts]
lansync-gui = "lansync.gui:main"

[tool.setuptools.packages.find]
include = ["lansync*"]
